--- a/recipe7.html
+++ b/recipe7.html
@@ -9,43 +9,49 @@
 </head>
 <body>
     <header>
-        <h1>Recetario 1ºDAM</h1>
+        <a href="index.html"><h1>Recetario 1ºDAM</h1></a>
         <navbar class="headerNav">
             <a href="index.html">Inicio</a>
-            <a href="recipeList.html">Recetas</a>
-            <a href="">Sube tu Receta</a>
-            <a href="">Tu cuenta</a>
+            <a href="recipeListSquare.html" class="bold">Recetas</a>
+            <a href="uploadRecipe.html">Sube tu Receta</a>
+            
         </navbar>
     </header>
 
     <main class="recipeContainer">
         <div class="recipe">
             <div class="recipeInsideBorder"></div>
-            <h1>Ensalada de tomate y jamón serrano.</h1>
+            <h1>Tarta de manzana</h1>
             <section class="recipeInfo">
                 <div class="recipeInfoLeft">
                     <div class="imgContainer">
-                        <img class="recipeImage" src="images/recipes/ensaladaJamon.jpg" alt="">
+                        <img class="recipeImage" src="images/recipes/recipe7.jpg" alt="">
                     </div>
                     
                 </div>
                 <div class="recipeInfoRight">
                     <div class="recipeInfoRightUp">
-                        <div class="ingredients">
+                        <div class="ingredients">S
                             <h1>Ingredientes</h2>
                             <ul>
-                                <li>Tomate crudo</li>
-                                <li>Cebolla</li>
-                                <li>Aguacate</li>
-                                <li>Jamon serrano</li>
-                                <li>Queso parmesano</li>
-                                <li>Aceite de oliva</li>
-                                <li>Vinagre</li>
+                                <li>3 manzanas</li>
+                                <li>100 g de azúcar</li>
+                                <li>100 g de mantequilla</li>
+                                <li>150 g de harina</li>
+                                <li>1 huevo</li>
+                                <li>Canela al gusto</li>
                             </ul>
                         </div>
                         <div class="tableContainer">
                             <table class="allergensTable">
-                                <caption>Alérgenos</caption>
+                                <caption>
+                                    Alérgenos 
+                                    <span>
+                                        <a href="https://acsa.gencat.cat/es/seguretat_alimentaria/seguretat_alimentaria_per_temes/etiquetatge_dels_aliments/informacio_sobre_al_lergens/index.html">
+                                            <img src="images/utils/hyperlink.png" class="hyperlinkIcon" alt="">
+                                        </a>
+                                    </span>
+                                </caption>
                                 <tr>
                                     <td>
                                         <div class="tooltip">
@@ -91,9 +97,9 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td><img class="isAllergen" src="images/utils/redDot.png" alt=""></td>
                                     <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
-                                    <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
-                                    <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
+                                    <td><img class="isAllergen" src="images/utils/redDot.png" alt=""></td>
                                     <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
                                     <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
                                     <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
@@ -159,15 +165,11 @@
                     <div class="instructions">
                         <h1>Preparación</h1>
                         <ol>
-                            <li>Lavar los tomates con agua, retirar el pedúnculo y cortarlo en rodajas.</li>
-                            <li>Salpimentarlos y ponerlos encima de un colador para soltar el exceso de agua.</li>
-                            <li>Pelar el aguacate y cortarlo en lonchas finas, la
-                                cebolla y el jamón. </li>
-                            <li>Disponer las rodajas de tomate en una bandeja de servir o
-                                en platos individuales, poner encima el aguacate, la cebolla, el jamón y por
-                                último el queso.</li>
-                            <li>Salpimentar al gusto y aliñar con el resto de aceite de oliva,
-                                servir frío.</li>
+                            <li>Precalienta el horno a 180°C.</li>
+                            <li>Pela y corta las manzanas en láminas.</li>
+                            <li>Mezcla harina, mantequilla, azúcar y huevo hasta obtener una masa homogénea.</li>
+                            <li>Extiende la masa en un molde, coloca las manzanas encima y espolvorea con canela.</li>
+                            <li>Hornea durante 40 minutos.</li>
                         </ol>
                     </div>
                 </div>
