--- a/recipeList.html
+++ b/recipeList.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header>
-        <h1>Recetario 1ºDAM</h1>
+        <a href="index.html"><h1>Recetario 1ºDAM</h1></a>
         <navbar class="headerNav">
             <a href="index.html">Inicio</a>
-            <a href="recipeList.html">Recetas</a>
-            <a href="">Sube tu Receta</a>
-            <a href="">Tu cuenta</a>
+            <a href="recipeListSquare.html" class="bold">Recetas</a>
+            <a href="uploadRecipe.html">Sube tu Receta</a>
+            
         </navbar>
     </header>
 
     <main class="recipeListMain">
         <section class="recipeListContainer">
             <nav class="listNav">
-                <a href="">Todas</a>
+                <a href="" class="bold">Todas</a>
                 <a href="">Primeros</a>
                 <a href="">Principales</a>
                 <a href="">Postres</a>
@@ -36,28 +36,28 @@
             </nav>
             <div class="recipeList">
                 <ul>
-                    <li><a href="recipe1.html">Ensalada de Jamon</a></li>
+                    <li><a href="recipe1.html">Ensalada fresca de aguacate y tomate</a></li>
                 </ul>
                 <ul>
-                    <li><a href="recipe2.html">Ensalada de Jamon</a></li>
+                    <li><a href="recipe2.html">Sopa de calabaza</a></li>
                 </ul>
                 <ul>
-                    <li><a href="recipe3.html">Ensalada de Jamon</a></li>
+                    <li><a href="recipe3.html">Tortilla de papas</a></li>
                 </ul>
                 <ul>
-                    <li><a href="recipe4.html">Ensalada de Jamon</a></li>
+                    <li><a href="recipe4.html">Pasta carbonara</a></li>
                 </ul>
                 <ul>
-                    <li><a href="recipe5.html">Ensalada de Jamon</a></li>
+                    <li><a href="recipe5.html">Pollo al horno con hierbas</a></li>
                 </ul>
                 <ul>
-                    <li><a href="recipe6.html">Ensalada de Jamon</a></li>
+                    <li><a href="recipe6.html">Salteado de verduras con tofu</a></li>
                 </ul>
                 <ul>
-                    <li><a href="recipe7.html">Ensalada de Jamon</a></li>
+                    <li><a href="recipe7.html">Tarta de manzana</a></li>
                 </ul>
                 <ul>
-                    <li><a href="recipe8.html">Ensalada de Jamon</a></li>
+                    <li><a href="recipe8.html">Brownie de chocolate</a></li>
                 </ul>
                 
             </div>
