--- a/recipe1.html
+++ b/recipe1.html
@@ -9,23 +9,23 @@
 </head>
 <body>
     <header>
-        <h1>Recetario 1ºDAM</h1>
+        <a href="index.html"><h1>Recetario 1ºDAM</h1></a>
         <navbar class="headerNav">
             <a href="index.html">Inicio</a>
-            <a href="recipeList.html">Recetas</a>
-            <a href="">Sube tu Receta</a>
-            <a href="">Tu cuenta</a>
+            <a href="recipeListSquare.html" class="bold">Recetas</a>
+            <a href="uploadRecipe.html">Sube tu Receta</a>
+            
         </navbar>
     </header>
 
     <main class="recipeContainer">
         <div class="recipe">
             <div class="recipeInsideBorder"></div>
-            <h1>Ensalada de tomate y jamón serrano.</h1>
+            <h1>Ensalada fresca de aguacate y tomate</h1>
             <section class="recipeInfo">
                 <div class="recipeInfoLeft">
                     <div class="imgContainer">
-                        <img class="recipeImage" src="images/recipes/ensaladaJamon.jpg" alt="">
+                        <img class="recipeImage" src="images/recipes/recipe1.jpg" alt="">
                     </div>
                     
                 </div>
@@ -34,18 +34,25 @@
                         <div class="ingredients">
                             <h1>Ingredientes</h2>
                             <ul>
-                                <li>Tomate crudo</li>
-                                <li>Cebolla</li>
-                                <li>Aguacate</li>
-                                <li>Jamon serrano</li>
-                                <li>Queso parmesano</li>
-                                <li>Aceite de oliva</li>
-                                <li>Vinagre</li>
+                                <li>1 aguacate</li>
+                                <li>10 tomates cherry</li>
+                                <li>Mezcla de hojas verdes</li>
+                                <li>1/2 cebolla morada</li>
+                                <li>Aceite de oliva virgen extra</li>
+                                <li>Zumo de medio limón</li>
+                                <li>Sal y pimienta al gusto</li>
                             </ul>
                         </div>
                         <div class="tableContainer">
                             <table class="allergensTable">
-                                <caption>Alérgenos</caption>
+                                <caption>
+                                    Alérgenos 
+                                    <span>
+                                        <a href="https://acsa.gencat.cat/es/seguretat_alimentaria/seguretat_alimentaria_per_temes/etiquetatge_dels_aliments/informacio_sobre_al_lergens/index.html">
+                                            <img src="images/utils/hyperlink.png" class="hyperlinkIcon" alt="">
+                                        </a>
+                                    </span>
+                                </caption>
                                 <tr>
                                     <td>
                                         <div class="tooltip">
