--- a/recipe2.html
+++ b/recipe2.html
@@ -9,23 +9,23 @@
 </head>
 <body>
     <header>
-        <h1>Recetario 1ºDAM</h1>
+        <a href="index.html"><h1>Recetario 1ºDAM</h1></a>
         <navbar class="headerNav">
             <a href="index.html">Inicio</a>
-            <a href="recipeList.html">Recetas</a>
-            <a href="">Sube tu Receta</a>
-            <a href="">Tu cuenta</a>
+            <a href="recipeListSquare.html" class="bold">Recetas</a>
+            <a href="uploadRecipe.html">Sube tu Receta</a>
+            
         </navbar>
     </header>
 
     <main class="recipeContainer">
         <div class="recipe">
             <div class="recipeInsideBorder"></div>
-            <h1>Ensalada de tomate y jamón serrano.</h1>
+            <h1>Sopa de calabaza</h1>
             <section class="recipeInfo">
                 <div class="recipeInfoLeft">
                     <div class="imgContainer">
-                        <img class="recipeImage" src="images/recipes/ensaladaJamon.jpg" alt="">
+                        <img class="recipeImage" src="images/recipes/recipe2.jpg" alt="">
                     </div>
                     
                 </div>
@@ -34,18 +34,25 @@
                         <div class="ingredients">
                             <h1>Ingredientes</h2>
                             <ul>
-                                <li>Tomate crudo</li>
-                                <li>Cebolla</li>
-                                <li>Aguacate</li>
-                                <li>Jamon serrano</li>
-                                <li>Queso parmesano</li>
+                                <li>1 calabaza mediana</li>
+                                <li>1 cebolla</li>
+                                <li>2 dientes de ajo</li>
+                                <li>500 ml de caldo de verduras</li>
                                 <li>Aceite de oliva</li>
-                                <li>Vinagre</li>
+                                <li>Sal y pimienta al gusto</li>
+                                <li>Nata líquida para decorar (opcional)</li>
                             </ul>
                         </div>
                         <div class="tableContainer">
                             <table class="allergensTable">
-                                <caption>Alérgenos</caption>
+                                <caption>
+                                    Alérgenos 
+                                    <span>
+                                        <a href="https://acsa.gencat.cat/es/seguretat_alimentaria/seguretat_alimentaria_per_temes/etiquetatge_dels_aliments/informacio_sobre_al_lergens/index.html">
+                                            <img src="images/utils/hyperlink.png" class="hyperlinkIcon" alt="">
+                                        </a>
+                                    </span>
+                                </caption>
                                 <tr>
                                     <td>
                                         <div class="tooltip">
@@ -159,15 +166,11 @@
                     <div class="instructions">
                         <h1>Preparación</h1>
                         <ol>
-                            <li>Lavar los tomates con agua, retirar el pedúnculo y cortarlo en rodajas.</li>
-                            <li>Salpimentarlos y ponerlos encima de un colador para soltar el exceso de agua.</li>
-                            <li>Pelar el aguacate y cortarlo en lonchas finas, la
-                                cebolla y el jamón. </li>
-                            <li>Disponer las rodajas de tomate en una bandeja de servir o
-                                en platos individuales, poner encima el aguacate, la cebolla, el jamón y por
-                                último el queso.</li>
-                            <li>Salpimentar al gusto y aliñar con el resto de aceite de oliva,
-                                servir frío.</li>
+                            <li>Pela y corta la calabaza en cubos.</li>
+                            <li>Sofríe la cebolla y el ajo en aceite de oliva hasta dorar.</li>
+                            <li>Añade la calabaza y el caldo de verduras, cocina hasta que la calabaza esté tierna.</li>
+                            <li>Tritura hasta obtener una crema suave y ajusta la sal y pimienta.</li>
+                            <li>Sirve con un chorrito de nata líquida si deseas.</li>
                         </ol>
                     </div>
                 </div>
