--- a/recipe8.html
+++ b/recipe8.html
@@ -9,23 +9,23 @@
 </head>
 <body>
     <header>
-        <h1>Recetario 1ºDAM</h1>
+        <a href="index.html"><h1>Recetario 1ºDAM</h1></a>
         <navbar class="headerNav">
             <a href="index.html">Inicio</a>
-            <a href="recipeList.html">Recetas</a>
-            <a href="">Sube tu Receta</a>
-            <a href="">Tu cuenta</a>
+            <a href="recipeListSquare.html" class="bold">Recetas</a>
+            <a href="uploadRecipe.html">Sube tu Receta</a>
+            
         </navbar>
     </header>
 
     <main class="recipeContainer">
         <div class="recipe">
             <div class="recipeInsideBorder"></div>
-            <h1>Ensalada de tomate y jamón serrano.</h1>
+            <h1>Brownie de chocolate</h1>
             <section class="recipeInfo">
                 <div class="recipeInfoLeft">
                     <div class="imgContainer">
-                        <img class="recipeImage" src="images/recipes/ensaladaJamon.jpg" alt="">
+                        <img class="recipeImage" src="images/recipes/recipe8.jpg" alt="">
                     </div>
                     
                 </div>
@@ -34,18 +34,23 @@
                         <div class="ingredients">
                             <h1>Ingredientes</h2>
                             <ul>
-                                <li>Tomate crudo</li>
-                                <li>Cebolla</li>
-                                <li>Aguacate</li>
-                                <li>Jamon serrano</li>
-                                <li>Queso parmesano</li>
-                                <li>Aceite de oliva</li>
-                                <li>Vinagre</li>
+                                <li>200 g de chocolate negro</li>
+                                <li>100 g de mantequilla</li>
+                                <li>150 g de azúcar</li>
+                                <li>3 huevos</li>
+                                <li>100 g de harina</li>
                             </ul>
                         </div>
                         <div class="tableContainer">
                             <table class="allergensTable">
-                                <caption>Alérgenos</caption>
+                                <caption>
+                                    Alérgenos 
+                                    <span>
+                                        <a href="https://acsa.gencat.cat/es/seguretat_alimentaria/seguretat_alimentaria_per_temes/etiquetatge_dels_aliments/informacio_sobre_al_lergens/index.html">
+                                            <img src="images/utils/hyperlink.png" class="hyperlinkIcon" alt="">
+                                        </a>
+                                    </span>
+                                </caption>
                                 <tr>
                                     <td>
                                         <div class="tooltip">
@@ -91,9 +96,9 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td><img class="isAllergen" src="images/utils/redDot.png" alt=""></td>
                                     <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
-                                    <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
-                                    <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
+                                    <td><img class="isAllergen" src="images/utils/redDot.png" alt=""></td>
                                     <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
                                     <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
                                     <td><img class="isAllergen" src="images/utils/greenDot.png" alt=""></td>
@@ -159,16 +164,12 @@
                     <div class="instructions">
                         <h1>Preparación</h1>
                         <ol>
-                            <li>Lavar los tomates con agua, retirar el pedúnculo y cortarlo en rodajas.</li>
-                            <li>Salpimentarlos y ponerlos encima de un colador para soltar el exceso de agua.</li>
-                            <li>Pelar el aguacate y cortarlo en lonchas finas, la
-                                cebolla y el jamón. </li>
-                            <li>Disponer las rodajas de tomate en una bandeja de servir o
-                                en platos individuales, poner encima el aguacate, la cebolla, el jamón y por
-                                último el queso.</li>
-                            <li>Salpimentar al gusto y aliñar con el resto de aceite de oliva,
-                                servir frío.</li>
-                        </ol>
+                            <li>Precalienta el horno a 180°C.</li>
+                            <li>Derrite el chocolate con la mantequilla.</li>
+                            <li>Bate los huevos con el azúcar y añade la mezcla de chocolate.</li>
+                            <li>Incorpora la harina y mezcla bien.</li>
+                            <li>Hornea durante 25 minutos.</li>
+                        </ol>                    
                     </div>
                 </div>
             </section> 
