--- a/recipeListSquare.html
+++ b/recipeListSquare.html
@@ -9,19 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Recetario 1ºDAM</h1>
+        <a href="index.html"><h1>Recetario 1ºDAM</h1></a>
         <navbar class="headerNav">
             <a href="index.html">Inicio</a>
-            <a href="recipeList.html">Recetas</a>
-            <a href="">Sube tu Receta</a>
-            <a href="">Tu cuenta</a>
+            <a href="recipeListSquare.html" class="bold">Recetas</a>
+            <a href="uploadRecipe.html">Sube tu Receta</a>
+            
         </navbar>
     </header>
 
     <main class="recipeListMain">
         <section class="recipeListContainer">
+            <!-- Lo mismo que comente en el indice, me hubiera gustado poder filtrarlos -->
             <nav class="listNav">
-                <a href="">Todas</a>
+                <a href="" class="bold">Todas</a>
                 <a href="">Primeros</a>
                 <a href="">Principales</a>
                 <a href="">Postres</a>
@@ -36,36 +37,36 @@
             </nav>
             <div class="recipeListSquare">
                 <a href="recipe1.html">
-                    <img class="recipeImageThumbnail" src="images/comida.jpg" alt="">
-                    <span class="recipeName">Plato 1</span>
+                    <img class="recipeImageThumbnail" src="images/recipes/recipe1.jpg" alt="">
+                    <span class="recipeName">Ensalada fresca de aguacate y tomate</span>
                 </a>
                 <a href="recipe2.html">
-                    <img class="recipeImageThumbnail" src="images/comida.jpg" alt="">
-                    <span class="recipeName">Plato 2</span>
+                    <img class="recipeImageThumbnail" src="images/recipes/recipe2.jpg" alt="">
+                    <span class="recipeName">Sopa de calabaza</span>
                 </a>
                 <a href="recipe3.html">
-                    <img class="recipeImageThumbnail" src="images/comida.jpg" alt="">
-                    <span class="recipeName">Plato 3</span>
+                    <img class="recipeImageThumbnail" src="images/recipes/recipe3.jpg" alt="">
+                    <span class="recipeName">Tortilla de papas</span>
                 </a>
                 <a href="recipe4.html">
-                    <img class="recipeImageThumbnail" src="images/comida.jpg" alt="">
-                    <span class="recipeName">Plato 4</span>
+                    <img class="recipeImageThumbnail" src="images/recipes/recipe4.jpg" alt="">
+                    <span class="recipeName">Pasta carbonara</span>
                 </a>
                 <a href="recipe5.html">
-                    <img class="recipeImageThumbnail" src="images/comida.jpg" alt="">
-                    <span class="recipeName">Plato 5</span>
+                    <img class="recipeImageThumbnail" src="images/recipes/recipe5.jpg" alt="">
+                    <span class="recipeName">Pollo al horno con hierbas</span>
                 </a>
                 <a href="recipe6.html">
-                    <img class="recipeImageThumbnail" src="images/comida.jpg" alt="">
-                    <span class="recipeName">Plato 6</span>
+                    <img class="recipeImageThumbnail" src="images/recipes/recipe6.jpg" alt="">
+                    <span class="recipeName">Salteado de verduras con tofu</span>
                 </a>
                 <a href="recipe7.html">
-                    <img class="recipeImageThumbnail" src="images/comida.jpg" alt="">
-                    <span class="recipeName">Plato 7</span>
+                    <img class="recipeImageThumbnail" src="images/recipes/recipe7.jpg" alt="">
+                    <span class="recipeName">Tarta de manzana</span>
                 </a>
                 <a href="recipe8.html">
-                    <img class="recipeImageThumbnail" src="images/comida.jpg" alt="">
-                    <span class="recipeName">Plato 8</span>
+                    <img class="recipeImageThumbnail" src="images/recipes/recipe8.jpg" alt="">
+                    <span class="recipeName">Brownie de chocolate</span>
                 </a>
             </div>
             
